k8s/monitoring/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tum-study-planner-monitoring
  labels:
    name: tum-study-planner-monitoring
    app: monitoring-stack
    team: stratton-oakmont
